<resources>
    <string name="app_name" translatable="false">QuotationShake</string>
    <string name="get_quotations">Random Quotations</string>
    <string name="favorite_quotations">Favorite Quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="quotation_shake" translatable="false">Quotation Shake</string>
    <string name="random_quotation">Random Quotation</string>
    <string name="about_info" translatable="false">Quotation Shake by \n\n V.Countero\n\n v.countero@inf.upv.es\n\n2020</string>
    <string name="insert_name">Insert your name</string>
    <string name="author_info">Author info</string>
    <string name="press_refresh">Hello %1s!\nPress Refresh to get a new quotation</string>
    <string name="sample_quotation">This is a sample quotation %1$d</string>
    <string name="sample_autor">This is a sample autor %1$d</string>
    <string name="username">Nameless One</string>
    <string name="settings_username">User name</string>
    <string name="settings_username_resume">Name that identifies the user</string>
    <string name="settings_category_web_service">Web service</string>
    <string name="settings_language">Quotation language</string>
    <string name="settings_language_resume">Quotations will be received in the selected language</string>
    <string name="settings_english">English</string>
    <string name="settings_english_value" translatable="false">en</string>
    <string name="settings_russian">Russian</string>
    <string name="settings_russian_value" translatable="false">ru</string>
    <string name="settings_http">HTTP request method</string>
    <string name="settings_http_resume">Web requests will be performed using the selected HTTP method</string>
    <string name="settings_get" translatable="false">GET</string>
    <string name="settings_post" translatable="false">POST</string>
    <string name="settings_category_database">Database</string>
    <string name="settings_database">Database access method</string>
    <string name="settings_database_resume">Database will be accessed following the selected method</string>
    <string name="menu_title_add">Add</string>
    <string name="menu_title_refresh">Refresh</string>
    <string name="menu_title_clear_all">Clear All</string>
    <string name="menu_favourite_dialog_title">Warning</string>
    <string name="menu_favourite_dialog_message">Are you sure that you want to delete ALL your favourite quotations?</string>
    <string name="toast_cannot_obtain_information">It is not possible to obtain the requested information</string>
    <string name="alert_delete_confirmation">Are you sure that you want to delete this quotation?</string>
    <string name="sqlite_openhelper" translatable="false">SQLiteOpenHelper</string>
    <string name="room" translatable="false">Room</string>
</resources>
